ellipsisDrive/penguin/penguin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: penguin
spec:
  selector:
    matchLabels:
      ellipsis-drive: penguin
  template:
    metadata:
      labels:
        ellipsis-drive: penguin
    spec:
      containers:
      - name: penguin
        image: ghcr.io/ellipsis-drive/penguin:<<<version>>>
        resources:
          requests:
            cpu: 100m
        ports:
        - containerPort: 80
        volumeMounts:
        - name: penguin-config
          mountPath: "/usr/share/nginx/html/public"
          subPath: config.js
      imagePullSecrets:
        - name: ghcr-secret

volumes:
  - name: penguin-config
    configMap:
      name: penguin-config
      items:
      - key: "config.js"
      path: "config.js"
