ellipsisDrive/penguin/penguin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: penguin
spec:
  selector:
    ellipsis-drive: penguin
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 80
