ellipsisDrive/penguin/penguin-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: alb
spec:
  controller: eks.amazonaws.com/alb
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: penguin-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80},{"HTTPS":443}]'
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/certificate-arn: <<<frontendCertificate>>>
spec:
  ingressClassName: alb
  rules:
    - host: <<<frontendUrl>>>
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: penguin
                port:
                  number: 80
